[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["cargo"] }
linkify = "0.10.0"
reqwest = { version = "0.11.26", features = ["blocking"] }
url = "2.5.0"
